--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "transcript-to-notes",
+  "name": "article-note-taker",
   "version": "1.0.0",
   "description": "",
   "main": "background.js",
+  "type": "module",
   "scripts": {
     "dev": "webpack --watch --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
@@ -11,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eventsource-parser": "^1.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
@@ -21,6 +24,7 @@
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "webextension-polyfill": "^0.10.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.10.0"
