--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,34 +1,36 @@
 {
-  "name": "Transcript Notes",
-  "description": "Extracts transcripts and generates notes using OpenAI.",
-  "version": "1.0",
-  "manifest_version": 3,
-  "icons": {
-    "16": "/assets/icon16.png",
-    "32": "/assets/icon32.png",
-    "48": "/assets/icon48.png",
-    "128": "/assets/icon128.png"
-  },
-  "permissions": [
-    "storage",
-    "tabs",
-    "activeTab",
-    "scripting",
-    "downloads",
-    "background"
-  ],
-  "background": {
-    "service_worker": "background.js"
-  },
-  "action": {
-    "default_icon": {
-      "16": "/assets/icon16.png"
-    }
-  },
-  "web_accessible_resources": [
-    {
-      "resources": ["youtube.js"],
-      "matches": ["*://*.youtube.com/*"]
-    }
-  ]
+	"name": "Article Note Taker",
+	"description": "Extracts articles and generates notes using ChatGPT.",
+	"version": "1.0",
+	"manifest_version": 3,
+	"icons": {
+		"16": "/assets/test-icon-16.png",
+		"24": "/assets/test-icon-24.png",
+		"32": "/assets/test-icon-32.png",
+		"48": "/assets/test-icon-48.png",
+		"128": "/assets/test-icon-128.png"
+	},
+	"host_permissions": ["<all_urls>"],
+	"permissions": [
+		"storage",
+		"tabs",
+		"activeTab",
+		"scripting",
+		"downloads",
+		"background"
+	],
+	"background": {
+		"service_worker": "background.js"
+	},
+	"action": {
+		"default_icon": {
+			"16": "/assets/test-icon-24.png"
+		}
+	},
+	"web_accessible_resources": [
+		{
+			"resources": ["page.js"],
+			"matches": ["<all_urls>"]
+		}
+	]
 }
