--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
     "eventsource-parser": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,7 +28,10 @@
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
+    "postcss-loader": "^7.3.3",
+    "style-loader": "^3.3.3",
     "webextension-polyfill": "^0.10.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
